React router added, created auth component

--- a/src/index.sass
+++ b/src/index.sass
@@ -3,7 +3,7 @@ $light-blue: #2bc3cc
 $white: #FFF 
 $black: #000000 
 $red: #f66271 
-$silver: #dbdbdb
+$silver: #dbdbdb 
 $dark-silver: #a9acb4 
 
 @font-face 
@@ -15,7 +15,7 @@ $dark-silver: #a9acb4
 @font-face 
     font-family: GessBold 
     src: url("/assets/fonts/GESSBold.otf") 
-html, body 
+html,body 
     font-family: "GessMedium" 
     direction: rtl
 /*General styles
@@ -84,3 +84,7 @@ form
 form.centered
     margin: 0 auto
     width: 50%
+
+.intl-tel-input
+    direction: ltr
+    width: 100%
