--- a/src/index.sass
+++ b/src/index.sass
@@ -130,4 +130,6 @@ form.centered
         border-radius: 4px !important
 
 .swal-title, .swal-text
-    color: $dark-blue       
+    color: $dark-blue
+.alice-carousel__stage-item
+    margin: 10px !important        
