Added slick slider plugin, category details UI and integration

--- a/src/index.sass
+++ b/src/index.sass
@@ -88,6 +88,12 @@ form
         color: $dark-blue
         height: 40px
         font-size: 13px
+    .light-outline-btn
+        border-radius: 50px
+        border: 1px solid $light-blue
+        color: $light-blue
+        height: 40px
+        font-size: 13px    
     input.ltr-input
         direction: ltr
         font-family: MontserratMedium
@@ -133,3 +139,20 @@ form.centered
     color: $dark-blue
 .alice-carousel__stage-item
     margin: 10px !important        
+
+.half-circle-border
+    width: 150px
+    height: 75px
+    border-top-left-radius: 85px
+    border-top-right-radius: 85px
+    border: 10px solid $silver
+    border-bottom: 0
+.gradient-bg
+    width: 70px
+    height: 70px
+    opacity: 0.7
+    border-radius: 13.5px
+    background-image: linear-gradient(145deg, #2bc3cc, #6141cc)    
+.unset-height
+    height: unset !important
+ 
