Publication details modal, layout fixes

--- a/src/components/shared/header/styles.sass
+++ b/src/components/shared/header/styles.sass
@@ -34,7 +34,7 @@ $silver: #d7d7d7
             .nav-item
                 width: 120px
                 text-align: center
-                border: 1px solid $white
+                border: 1px solid transparent
 
                 &:after
                     display: block
