--- a/src/index.sass
+++ b/src/index.sass
@@ -1,5 +1,6 @@
 $dark-blue: #4b3a85 
-$light-blue: #2bc3cc 
+$light-blue: #2bc3cc
+$mid-blue: #6c53bf 
 $white: #FFF 
 $black: #000000 
 $red: #f66271 
@@ -36,6 +37,8 @@ a:hover, a:focus, a:active
 
 .light-text
     color: $light-blue
+.mid-text
+    color: $mid-blue    
 .dark-silver-text
     color: $dark-silver
 .dark-bg
@@ -160,5 +163,7 @@ form.centered
 .box-layout
    border: 1px solid $silver
    border-radius: 5px
-
-   
+.slick-track
+   float: right !important
+.slick-prev:before, .slick-next:before
+   color: $dark-blue
