--- a/src/index.sass
+++ b/src/index.sass
@@ -47,7 +47,9 @@ a:hover, a:focus, a:active
     font-family: GessLight
 .cover-img
     object-fit: cover
-    object-position: left    
+    object-position: left
+.contain-img
+    object-fit: contain        
 .underlined-tabs
     li
         width: 100px
@@ -167,3 +169,7 @@ form.centered
    float: right !important
 .slick-prev:before, .slick-next:before
    color: $dark-blue
+.footer
+    margin-top: 200px 
+
+    
