Edit account page UI

--- a/src/index.sass
+++ b/src/index.sass
@@ -94,7 +94,7 @@ form
         font-family: MontserratMedium
     input.ltr-input::-webkit-input-placeholder
         direction: rtl
-        font-family: GESSLight 
+        font-family: GessMedium 
     small
         color: $red
         font-size: 10px
