--- a/src/components/home/styles.sass
+++ b/src/components/home/styles.sass
@@ -3,6 +3,10 @@
    background-repeat: no-repeat
    background-position: right
    background-size: contain
+   animation-name: floating
+   animation-duration: 3s
+   animation-iteration-count: infinite
+   animation-timing-function: ease-in-out
 .categories-section
    background-image: url(/assets/images/green-shape.png)
    background-repeat: no-repeat
@@ -20,3 +24,13 @@
    padding-bottom: 40px   
 .section-padder
    padding-top: 100px   
+
+@keyframes floating
+  from
+    transform: translate(0, 0px)
+
+  65%
+    transform: translate(0, 15px)
+
+  to
+    transform: translate(0, 0px)   
