Cart UI missings, account reset pw UI

--- a/src/components/home/styles.sass
+++ b/src/components/home/styles.sass
@@ -3,16 +3,12 @@
    background-repeat: no-repeat
    background-position: right
    background-size: contain
-   animation-name: floating
-   animation-duration: 3s
-   animation-iteration-count: infinite
-   animation-timing-function: ease-in-out
 .categories-section
    background-image: url(/assets/images/green-shape.png)
    background-repeat: no-repeat
    background-position: right
    background-size: contain   
-.journey-section
+.testimonials-section
    background-image: url(/assets/images/cloud-bg.png)
    background-repeat: no-repeat
    background-position: center center
