Added static instructor name, desc, and subscribe btn in card component

--- a/src/components/shared/card/styles.sass
+++ b/src/components/shared/card/styles.sass
@@ -6,4 +6,13 @@
    .card-body
      .card-title
         min-height: 40px
-        margin-bottom: 10px   
+        margin-bottom: 10px
+   .card-footer
+      background-color: #FFF
+      border-top: none
+      padding: 0px 20px 20px 20px
+      display: none
+.course-card:hover
+   .card-footer
+      display: block
+      transition: display ease-out 0.3s    
