Cart integration, latest courses integration in homepage and cart, getting success response on google login

--- a/src/components/shared/card/styles.sass
+++ b/src/components/shared/card/styles.sass
@@ -1,11 +1,12 @@
 .course-card
-   min-height: 345px
+   min-height: 300px
    .card-img-top
-      height: 200px
+      height: 180px
       object-fit: cover
+      object-position: center
    .card-body
      .card-title
-        min-height: 40px
+        min-height: 30px
         margin-bottom: 10px
    .card-footer
       background-color: #FFF
