--- a/src/components/shared/footer/styles.sass
+++ b/src/components/shared/footer/styles.sass
@@ -5,5 +5,11 @@ $black: #000000
 $red: #f66271
 $silver: #dbdbdb
 
-.footer
+.top-border
     border-top: 1px solid $dark-blue
+.footer
+    background-image: url(/assets/images/cloud-bg.png)
+    background-repeat: no-repeat
+    background-position: center top
+    background-size: cover
+    padding-top: 200px
