--- a/src/index.sass
+++ b/src/index.sass
@@ -145,6 +145,8 @@ form
 form.centered
     margin: 0 auto
     width: 50%
+a.btn
+    line-height: 25px    
 .dark-outline-btn
     border-radius: 50px
     border: 1px solid $dark-blue
@@ -154,7 +156,7 @@ form.centered
     &:hover, &:focus
         background-color: $dark-blue
         color: $white
-        transition: background-color ease-out 0.3s
+        transition: background-color ease-out 0.3s  
 .dark-btn
     border-radius: 50px
     border: 1px solid $dark-blue
@@ -228,8 +230,6 @@ form.centered
    border-radius: 5px
 .slick-prev:before, .slick-next:before
    color: $dark-blue
-.footer
-    margin-top: 100px
 .ball-clip-rotate > div
     margin: 0px
     
