Getting user details

--- a/src/components/shared/card/styles.sass
+++ b/src/components/shared/card/styles.sass
@@ -8,6 +8,8 @@
      .card-title
         min-height: 30px
         margin-bottom: 10px
+   .card-body>p
+      min-height: 30px     
    .card-footer
       background-color: #FFF
       border-top: none
