Checkout page UI

--- a/src/index.sass
+++ b/src/index.sass
@@ -67,6 +67,8 @@ a:hover, a:focus, a:active
     background: $dark-blue
 .light-bg
     background-color: $light-blue
+.silver-bg
+    background-color: $light-silver    
 .off-white-bg
     background-color: $off-white          
 .light-font-text
