Changing bg conditionally, changing header if authenticated, categories distribution in home page

--- a/src/components/home/styles.sass
+++ b/src/components/home/styles.sass
@@ -7,7 +7,9 @@
    background-image: url(/assets/images/green-shape.png)
    background-repeat: no-repeat
    background-position: right
-   background-size: contain    
+   background-size: contain
+   padding-top: 280px
+   padding-bottom: 50px    
 .padder
    padding-top: 320px
    padding-bottom: 40px   
