Bugs and layout fixes

--- a/src/components/shared/header/styles.sass
+++ b/src/components/shared/header/styles.sass
@@ -52,21 +52,20 @@ $silver: #d7d7d7
                     transform-origin: 0 50%
 
             .nav-link
-                color: $dark-blue
-                font-size: 14px
+                font-size: 13px
+                font-family: GessLight
             .nav-link.light-text
                 color: $light-blue 
             .nav-item.rounded-nav-item
-                border: 1px solid $light-blue
                 border-radius: 50px
                 color: $dark-blue
-                &:hover:after, &.active:after
-                   transform: scaleX(0)
-                &:hover, &:focus
-                   background-color: $light-blue
-                   transition: background-color ease-out 0.3s
-                   a
-                       color: $white    
+                // &:hover:after, &.active:after
+                //    transform: scaleX(0)
+                // &:hover, &:focus
+                //    background-color: $light-blue
+                //    transition: background-color ease-out 0.3s
+                //    a
+                //        color: $white    
 
                 .nav-link
                     color: $light-blue
