Responsive fixes, single course video and download URLs, publication purchase URL, ScrollToTop onNavigate, Twitter login component

--- a/src/components/home/styles.sass
+++ b/src/components/home/styles.sass
@@ -7,7 +7,7 @@
    background-image: url(/assets/images/green-shape.png)
    background-repeat: no-repeat
    background-position: right
-   background-size: contain
+   background-size: 20%
    padding-top: 280px
    padding-bottom: 50px    
 .padder
