Subscribe to newsletter integration

--- a/src/index.sass
+++ b/src/index.sass
@@ -79,7 +79,7 @@ a:hover, a:focus, a:active
 .contain-img
     object-fit: contain
 .smaller
-    font-size: 65%
+    font-size: 65% !important
 .light-border
     border: 1px solid $light-blue !important 
 .white-border
@@ -197,6 +197,7 @@ a.btn
     margin-right: 3px
     align-self: center
     background-color: #6c53bf
+    bottom: 20px
 .react-code-input
     direction: ltr
     input
