Content loader in categories list

--- a/src/index.sass
+++ b/src/index.sass
@@ -241,7 +241,9 @@ a.btn
     margin-right: 0    
 .ball-clip-rotate > div
     margin: 0px
-
+.intl-tel-input .selected-flag:focus
+    outline: 0
+    box-shadow: none
    
 @media only screen and (max-width: 767px)
     .w-25, .w-75
