--- a/src/components/checkout/styles.sass
+++ b/src/components/checkout/styles.sass
@@ -64,3 +64,20 @@ $off-white: #fefefe
     position: absolute
     top: 11px
     left: 2px
+.green-box
+    border: 2px solid #009956 !important
+    .box-header
+        border-bottom: 2px solid #009956
+        border-top-right-radius: 5px
+        border-top-left-radius: 5px
+    .box-body
+        border-bottom-left-radius: 5px
+        border-bottom-right-radius: 5px    
+.blue-box
+    border: 2px solid #1b429a !important
+    .box-header
+        border-bottom: 2px solid #1b429a
+        background-color: #1b429a
+    .box-body
+        border-bottom-left-radius: 5px
+        border-bottom-right-radius: 5px         
