--- a/src/index.sass
+++ b/src/index.sass
@@ -38,6 +38,8 @@ a:hover, a:focus, a:active
   box-shadow: none
 .br-5
     border-radius: 5px !important
+.w-40
+    width: 40% !important    
 .radius-top-0
     border-top-right-radius: 0px !important
     border-top-left-radius: 0px !important
@@ -60,7 +62,7 @@ a:hover, a:focus, a:active
 .red-text
     color: $red    
 .mid-text
-    color: $mid-blue    
+    color: $mid-blue !important    
 .dark-silver-text
     color: $dark-silver
 .dark-bg
@@ -196,7 +198,7 @@ a.btn
     justify-content: center
     margin-right: 3px
     align-self: center
-    background-color: #6c53bf
+    background-color: #9786d2
     bottom: 20px
 .react-code-input
     direction: ltr
