--- a/src/components/home/styles.sass
+++ b/src/components/home/styles.sass
@@ -1,24 +1,11 @@
-.hero-section
-   background-image: url(/assets/images/shape-flying.png)
-   background-repeat: no-repeat
-   background-position: right
-   background-size: contain
-.categories-section
-   padding-top: 280px
-   padding-bottom: 50px    
-.padder
-   padding-top: 320px
-   padding-bottom: 40px   
+.hero-section, .testimonials-section
+  padding-top: 100px
+  margin-bottom: 100px
+.journey-section
+  background-image: url("/assets/images/shape-bg.png")
+  background-size: contain
+  background-repeat: no-repeat
 .section-padder
    padding-top: 100px
    padding-bottom: 50px   
 
-@keyframes floating
-  from
-    transform: translate(0, 0px)
-
-  65%
-    transform: translate(0, 15px)
-
-  to
-    transform: translate(0, 0px)   
