--- a/src/components/shared/header/styles.sass
+++ b/src/components/shared/header/styles.sass
@@ -40,7 +40,7 @@ $silver: #d7d7d7
                 &:after
                     display: block
                     content: ""
-                    border-bottom: 2px solid $light-blue
+                    border-bottom: 2px solid $dark-blue
                     transform: scaleX(0)
                     transition: transform 250ms ease-in-out
                     transform-origin: 100% 50%
