--- a/src/components/home/styles.sass
+++ b/src/components/home/styles.sass
@@ -1,3 +1,14 @@
+$dark-blue: #4b3a85 
+$light-blue: #2bc3cc
+$mid-blue: #6c53bf 
+$white: #FFF 
+$black: #000000 
+$red: #f66271 
+$silver: #dbdbdb
+$light-silver: #f2f2f2 
+$dark-silver: #a9acb4
+$off-white: #fefefe 
+
 .hero-section, .testimonials-section
   padding-top: 100px
   margin-bottom: 100px
@@ -8,4 +19,13 @@
 .section-padder
    padding-top: 100px
    padding-bottom: 50px   
+.carousel-indicators
+  bottom: -50px
+  li
+    width: 8px
+    height: 8px
+    border-radius: 50%
+    background-color: $dark-blue
+.carousel-caption
+  padding-bottom: 10px
 
